--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/assets/img/react.svg" />
+  <link rel="icon" type="image/svg+xml" href="src/assets/img/react.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CRUD App</title>
 </head>
