--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="src/assets/img/react.svg" />
+  <!-- <link rel="stylesheet" type="text/css" href="assets/vendor/plyr/plyr.css" /> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CRUD App</title>
 </head>
@@ -11,6 +13,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/index.jsx"></script>
+  <!-- <script src="src/assets/كم التكلفة الحقيقية لمشروع الدروب شبينغ؟  عبدالله الفوزان 720 x 1280.mp4"></script> -->
 </body>
 
 </html>
